Remove hardcoded Paris block and fix gameCsvData scope

--- a/index.html
+++ b/index.html
@@ -15,14 +15,7 @@
         </div>
     </div>
     <svg id="main-svg" viewBox="0 0 10000 10000" preserveAspectRatio="xMidYMid meet">
-        <svg id="block" x="4378.5" y="4761.5" width="1243" height="477" overflow="visible">
-            <g id="scale-group">
-                <g transform="translate(-2717 -2305)">
-                    <path d="M2740.5 2388.83C2740.5 2353.86 2768.86 2325.5 2803.83 2325.5L3874.17 2325.5C3909.14 2325.5 3937.5 2353.86 3937.5 2388.83L3937.5 2642.17C3937.5 2677.14 3909.14 2705.5 3874.17 2705.5L2803.83 2705.5C2768.86 2705.5 2740.5 2677.14 2740.5 2642.17Z" stroke="#6273B4" stroke-width="38.9583" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="8" stroke-opacity="1" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="1"/>
-                    <text class="no-select" fill="#000000" fill-opacity="1" font-family="American Typewriter,American Typewriter_MSFontService,sans-serif" font-style="normal" font-variant="normal" font-weight="400" font-stretch="normal" font-size="220" text-anchor="start" direction="ltr" writing-mode="lr-tb" unicode-bidi="normal" text-decoration="none" transform="matrix(1 0 0 1 3005 2590)">Paris</text>
-                </g>
-            </g>
-        </svg>
+        <!-- Blocks will be added dynamically by script.js -->
     </svg>
     <input type="text" id="connection-input" placeholder="Make Connection">
     <div id="game-window"></div>
@@ -31,7 +24,5 @@
     <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
     <script src="script.js"></script>
-    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'92f48345fa66e14d',t:'MTc0NDQ3OTY2OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
-    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'932e98400a7cbfff',t:'MTc0NTA4ODcwMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
