Restored Profile button in main game screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="title-banner">
         <span class="banner-text">Deep Knowledge Trivia</span>
         <div class="banner-buttons">
+            <button class="banner-button" id="profile-button">Profile</button>
             <button class="banner-button" id="how-to-play-button">How to Play?</button>
             <button class="banner-button" id="territory-button">Territory 1 v 1</button>
         </div>
