Fixed TypeError in updateGrid and implemented multiplayer game flow with Start Game button

--- a/mode2/index2.html
+++ b/mode2/index2.html
@@ -35,6 +35,7 @@
     </svg>
     <input type="text" id="connection-input" placeholder="Enter text here">
     <div id="game-window"></div>
+    <button id="start-game-button" style="position: fixed; top: 70%; left: 20px; transform: translateY(-50%); background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; z-index: 10;">Start Game</button>
     <script src="script2.js"></script>
 </body>
 </html>
