Fixed TypeError in game state update and centered Start Game button

--- a/mode2/index2.html
+++ b/mode2/index2.html
@@ -34,8 +34,10 @@
         <g id="line-group"></g>
     </svg>
     <input type="text" id="connection-input" placeholder="Enter text here">
-    <div id="game-window"></div>
-    <button id="start-game-button" style="position: fixed; top: 70%; left: 20px; transform: translateY(-50%); background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; z-index: 10;">Start Game</button>
+    <div id="game-window-container">
+        <div id="game-window"></div>
+        <button id="start-game-button" style="position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; z-index: 10;">Start Game</button>
+    </div>
     <script src="script2.js"></script>
 </body>
 </html>
