Trying to Fix Grid Update Issues

--- a/mode2/index2.html
+++ b/mode2/index2.html
@@ -36,6 +36,8 @@
     <input type="text" id="connection-input" placeholder="Enter text here">
     <div id="game-window-container">
         <div id="game-window"></div>
+        <button id="start-game-button" style="background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; margin-top: 10px;">Start Game</button>
+        </div>
         <button id="start-game-button" style="position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; z-index: 10;">Start Game</button>
     </div>
     <script src="script2.js"></script>
