Fixed Index issue making two buttons

--- a/mode2/index2.html
+++ b/mode2/index2.html
@@ -34,12 +34,10 @@
         <g id="line-group"></g>
     </svg>
     <input type="text" id="connection-input" placeholder="Enter text here">
-    <div id="game-window-container">
-        <div id="game-window"></div>
-        <button id="start-game-button" style="background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; margin-top: 10px;">Start Game</button>
-        </div>
-        <button id="start-game-button" style="position: absolute; bottom: -50px; left: 50%; transform: translateX(-50%); background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; z-index: 10;">Start Game</button>
+    <div id="game-window">
+        <button id="start-game-button" style="display: block; margin: 10px auto; background-color: #6273B4; color: #fff; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer;">Start Game</button>
     </div>
     <script src="script2.js"></script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93db3b26cb8d7cc4',t:'MTc0Njg5ODkyNC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
