adding free play mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="banner-buttons">
             <button class="banner-button" id="profile-button">Profile</button>
             <button class="banner-button" id="how-to-play-button">How to Play?</button>
+            <button id="free-play-button" class="banner-button">Free Play</button>
             <button class="banner-button" id="territory-button">Territory 1 v 1</button>
         </div>
     </div>
