changing how free play is implemented

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="title-banner">
         <span class="banner-text">Deep Knowledge Trivia</span>
         <div class="banner-buttons">
+            <button class="banner-button" id="daily-play-button">Daily Play</button>
+            <button class="banner-button" id="free-play-button">Free Play</button>
             <button class="banner-button" id="profile-button">Profile</button>
             <button class="banner-button" id="how-to-play-button">How to Play?</button>
             <button id="free-play-button" class="banner-button">Free Play</button>
@@ -31,6 +33,7 @@
     <input type="text" id="connection-input" placeholder="Enter text here">
     <div id="game-window"></div>
     <script src="script.js"></script>
+    <script src="freeplay-script.js"></script>
     <script>
         // Navigate to Territory 1 v 1 mode
         document.getElementById('territory-button').addEventListener('click', () => {
